[gd_scene load_steps=7 format=3 uid="uid://brc0n71wqkx1f"]

[ext_resource type="PackedScene" uid="uid://6yghlai5jgs6" path="res://scenes/car.tscn" id="1_os6oc"]
[ext_resource type="Script" path="res://scripts/network_controlled_car.gd" id="2_xd58w"]
[ext_resource type="Shader" path="res://shaders/color_replace.gdshader" id="3_stgws"]
[ext_resource type="PackedScene" uid="uid://oot1uvi3gb2t" path="res://scenes/car_sensors.tscn" id="4_7gvld"]
[ext_resource type="Script" path="res://components/car_sensors.gd" id="5_k2lay"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4tw2h"]
resource_local_to_scene = true
shader = ExtResource("3_stgws")
shader_parameter/target_color = Color(0, 1, 0, 1)
shader_parameter/replacement_color = Color(0.839216, 0, 0, 1)
shader_parameter/color_thresh = 0.75

[node name="NetworkControlledCar" instance=ExtResource("1_os6oc")]
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("2_xd58w")
num_network_inputs = 15

[node name="Sprite" parent="." index="1"]
material = SubResource("ShaderMaterial_4tw2h")

[node name="CameraMount" parent="." index="2" groups=["Cars"]]
position = Vector2(0, -60.975)

[node name="Sensors" parent="." index="3" instance=ExtResource("4_7gvld")]
script = ExtResource("5_k2lay")

[node name="CheckpointTimer" type="Timer" parent="." index="4"]
wait_time = 5.0
autostart = true

[node name="LifetimeTimer" type="Timer" parent="." index="5"]
wait_time = 120.0
one_shot = true

[connection signal="checkpoint_updated" from="." to="." method="_on_checkpoint_updated"]
[connection signal="timeout" from="CheckpointTimer" to="." method="_on_checkpoint_timer_timeout"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
